--- a/M_and_F_classification.ipynb
+++ b/M_and_F_classification.ipynb
@@ -305,7 +305,8 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vr1fJdCDFJfP",
-        "outputId": "415dcb2f-7a41-4d82-f203-129c61d7cf71"
+        "outputId": "415dcb2f-7a41-4d82-f203-129c61d7cf71",
+        "collapsed": true
       },
       "execution_count": null,
       "outputs": [
